--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta property="og:site_name" content="Site">
+		<meta property="og:title" content="Site" />
+		<meta property="og:description" content="Site" />
+		<meta property="og:image" itemprop="image" content="/images/Logo_Draft_White_Transparent.png">
+		<meta property="og:type" content="website" />
+
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/images/Logo_Draft_White_Transparent.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
