--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta property="og:site_name" content="Site">
+		<!-- <meta property="og:site_name" content="Site">
 		<meta property="og:title" content="Site" />
 		<meta property="og:description" content="Site" />
 		<meta property="og:image" itemprop="image" content="/images/Logo_Draft_White_Transparent.png">
 		<meta property="og:type" content="website" />
 
+		<link rel="icon" href="%PUBLIC_URL%/images/Logo_Draft_White_Transparent.png" /> -->
+
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/images/Logo_Draft_White_Transparent.png" />
+		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta name="description" content="Web site created using create-react-app" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+		<!-- <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="This is a description for the website. Please change this Jeremy" />
@@ -18,7 +32,7 @@
 			rel="stylesheet"
 		/>
 
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
 		<title>LowKey</title>
 	</head>
