--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
 		<link rel="icon" href="%PUBLIC_URL%/images/Logo_Draft_White_Transparent.png" /> -->
 
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/images/Logo_Draft_White_Transparent.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
+		<meta name="description" content="This is a description for the website. Please change this Jeremy" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
